Fix gallery position on mobile

--- a/vite-ts-frontend/src/Components/Gallery.scss
+++ b/vite-ts-frontend/src/Components/Gallery.scss
@@ -53,14 +53,18 @@
 
 @media only screen and (max-width: 1000px) {
   #gallery {
+    position: static;
     flex-direction: column;
     height: 80%;
-    top: 15%;
-    left: 10vmin;
     overflow-y: scroll;
     transform: none;
     animation-name: none;
     animation-duration: 0s;
+  }
+
+  .gallery-bg {
+    display: flex;
+    justify-content: center;
   }
 
   #gallery > .img {
